# Memory-Minder

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/: README.md  alembic.ini  pyproject.toml
backend/app/db/: __init__.py
backend/app/db/config/: __init__.py
backend/app/db/connection/: __init__.py  session.py
backend/app/db/data/: images.csv  script_filling.py
backend/app/db/gateway/: __init__.py  base.py  false_state_stats.py  image.py  n_back_stats.py  names_memory_stat.py  simon_stats.py  user.py  viewed_image.py  words_stats.py
backend/app/db/models/: __init__.py  false_state_stats.py  image.py  n_back_stats.py  names_memory_stat.py  simon_stats.py  user.py  viewed_image.py  words_stats.py
backend/app/schemas/: __init__.py
backend/app/schemas/internal_objects/: __init__.py  base.py  false_state_stats.py  image.py  image_memory_stat.py  n_back_stats.py  simon_stats.py  user.py  viewed_image.py  words_stats.py
backend/app/services/: __init__.py
backend/app/tests/: __init__.py
backend/app/utils/: __init__.py  authorization.py
backend/config/: __init__.py  utils.py
backend/config/base/: development.py
backend/config/settings/: __init__.py  development.py  production.py
backend/docs/: agile.md  codestyle.md  get_started.md  git.md  howto.md  postgres.md
backend/logs/: __init__.py
backend/migrations/: __init__.py  env.py
backend/migrations/versions/: 1fa9d757364c_.py  378f199289d0_.py  3a3faa1bf081_.py  43f9499efd93_.py  5ccbc777d7cc_.py  6c6725bd3ae8_.py  6f0f6e118e93_initial_migration.py  8a752ffaea93_test_revision.py  9755a19c4228_.py  9d90a2369720_.py  c49ade389f59_.py  d599d0020ffc_.py  d7abfe4cfd24_merge_heads.py  e8dbec3ba607_initial_migration.py  f6b8bcffc58c_.py
backend/scripts/: __init__.py  download_image.py  paintings.py  test.sql
frontend/: Dockerfile
(+68 files in other folders)
