[tool.poetry]
name = "memory_minder"
version = "0.1.0"
description = ""
authors = ["vivatttt <georgepustovoi@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.4"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.6"
alembic = "^1.14.0"
pydantic-settings = "^2.7.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
aiogram = "^3.17.0"
boto3 = "^1.35.93"
langchain = "^0.3.14"
langchain-community = "^0.3.14"
kagglehub = "^0.3.6"
yandex-cloud-ml-sdk = "^0.2.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.pydocstyle]
convention = "google"