[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vivatttt <georgepustovoi@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
]
ignore = [
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.pydocstyle]
convention = "google"